[package]
name = "gen_bls_keys"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.12"
clap = { version = "4.5.4", features = ["derive"] }
const-hex = "1.14.1"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
